movement on gorizont

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
     <div class="main_block">
 
+        <div class="field">
+            <div class="ball_body" id="ballBody"></div>
+        </div>
+
     </div>
 
     <script type="module" src="js/main.js"></script>
